DUPCODE-48: Fix parent org overlap

--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -111,6 +111,12 @@ a#logo { /* Wrapping link for logo */
     //see _base.scss and fonts directory for font-face fonts
     font-family: $helvetica-neue !important;
   }
+
+  h2#site-slogan {
+    margin-bottom: 1.15em;
+    margin-top: 1.15em;
+    min-width: 30em; //Fix for scrunched text if Parent Org is longer than Site Name; allow for long names
+  }
 }
 
 
